src/objects/Docket_Activity__c.object
<CustomObject>
    <description>Interesting updates to case leads</description>
    <fields>
        <fullName>Case__c</fullName>
        <label>Case</label>
        <referenceTo>Case_Leads__c</referenceTo>
        <relationshipLabel>Docket Activities</relationshipLabel>
        <relationshipName>Docket_Activities</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
        <writeRequiresMasterRead>true</writeRequiresMasterRead>
    </fields>
    <fields>
        <fullName>Docket_Entry_Date__c</fullName>
        <label>Docket Entry Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Docket_Update__c</fullName>
        <label>Docket Update</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Order__c</fullName>
        <label>Order</label>
        <precision>10</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Unicourt_Updated_Date__c</fullName>
        <label>Unicourt Updated Date</label>
        <type>Date</type>
    </fields>
    <label>Docket Activity</label>
    <nameField>
        <displayFormat>{0000000}</displayFormat>
        <label>Docket Activity Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Docket Activities</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>